(feat) Add link to deployed application

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To RooMe!</div>
                 <div class="intro-heading">We're Excited You're Here</div>
-                <a href="#services" class="page-scroll btn btn-xl">Find a RooMe</a>
+                <a href="http://roome-app.azurewebsites.net" class="page-scroll btn btn-xl">Find a RooMe</a>
             </div>
         </div>
     </header>
@@ -173,10 +173,9 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; RooMe 2015</span>
-                </div>
-                <div class="col-md-8"></div>
+                <div class="col-md-4"></div>
+                <div class="col-md-4"></div>
+                <div class="col-md-4"></div>
             </div>
         </div>
     </footer>
