(feat) Add link in footer

--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <a href="http://roome-app.azurewebsites.net" class="page-scroll btn btn-xl">Find a RooMe</a>
+                </div>
                 <div class="col-md-4"></div>
             </div>
         </div>
