Add link to github repo

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <div class="intro-lead-in">Welcome To RooMe!</div>
                 <div class="intro-heading">We're Excited You're Here</div>
                 <a href="http://roome-app.azurewebsites.net" class="page-scroll btn btn-xl">Find a RooMe</a>
+                <a href="https://github.com/Puppies-and-Kitties/tfr" class="page-scroll btn btn-xl">Check out the Code</a> 
             </div>
         </div>
     </header>
