--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="#techStack">Tech Stack</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -118,6 +121,7 @@
         </div>
     </section>
 
+
     <!-- Team Section -->
     <section id="team" class="bg-light-gray">
         <div class="container">
@@ -165,6 +169,45 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted"></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Tech Stack -->
+    <section id="techStack">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Tech Stack</h2>
+                    <h3 class="section-subheading text-muted">The Technology that made it all possible</h3>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-users fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Front End</h4>
+                    <p class="text-muted">Ionic, AngularJS, & Google Maps</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Back End</h4>
+                    <p class="text-muted">Node.js/Express, MongoDB, & Firebase</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Dev Ops</h4>
+                    <p class="text-muted">TravisCI, Karma, Jasmine, & Gulp</p>
                 </div>
             </div>
         </div>
