--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-users fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Front End</h4>
                     <p class="text-muted">Ionic, AngularJS, & Google Maps</p>
@@ -196,7 +196,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-server fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Back End</h4>
                     <p class="text-muted">Node.js/Express, MongoDB, & Firebase</p>
@@ -204,7 +204,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-cog fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Dev Ops</h4>
                     <p class="text-muted">TravisCI, Karma, Jasmine, & Gulp</p>
