Add tech stack logos

--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@
                     </span>
                     <h4 class="service-heading">Front End</h4>
                     <p class="text-muted">Ionic, AngularJS, & Google Maps</p>
+                    <div class="techStackPics">
+                        <img src="img/logos/ionic.png" class="img-responsive techStackPic" alt="Ionic">
+                        <img src="img/logos/angular.png" class="img-responsive techStackPic" alt="AngularJS">
+                        <img src="img/logos/googleMaps.png" class="img-responsive techStackPic" alt="Google Maps">                        
+                    </div>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -200,6 +205,12 @@
                     </span>
                     <h4 class="service-heading">Back End</h4>
                     <p class="text-muted">Node.js/Express, MongoDB, & Firebase</p>
+                    <div class="techStackPics">
+                        <img src="img/logos/node.png" class="img-responsive techStackPic" alt="NodeJS">
+                        <img src="img/logos/express.png" class="img-responsive techStackPic" alt="Express">
+                        <img src="img/logos/mongodb.png" class="img-responsive techStackPic" alt="MongoDB">
+                        <img src="img/logos/firebase.png" class="img-responsive techStackPic" alt="Firebase">                        
+                    </div>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -208,6 +219,12 @@
                     </span>
                     <h4 class="service-heading">Dev Ops</h4>
                     <p class="text-muted">TravisCI, Karma, Jasmine, & Gulp</p>
+                    <div class="techStackPics">
+                        <img src="img/logos/travis.png" class="img-responsive techStackPic" alt="TravisCI">
+                        <img src="img/logos/karma.png" class="img-responsive techStackPic" alt="Karma">
+                        <img src="img/logos/jasmine.png" class="img-responsive techStackPic" alt="Jasmine">
+                        <img src="img/logos/gulp.png" class="img-responsive techStackPic" alt="Gulp">                        
+                    </div>
                 </div>
             </div>
         </div>
