Add link to presentation video

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 <div class="intro-heading">We're Excited You're Here</div>
                 <a href="http://roome-app.azurewebsites.net" class="page-scroll btn btn-xl">Find a RooMe</a>
                 <a href="https://github.com/Puppies-and-Kitties/tfr" class="page-scroll btn btn-xl">Check out the Code</a> 
+                <a href="https://www.youtube.com/watch?v=baLfzbT_nQA&list=PLT-DLWOBKbB6KgYf3mtDp106Bn6woGce9&index=18" class="page-scroll btn btn-xl">See a Live Demo</a> 
             </div>
         </div>
     </header>
